--- a/CodeForces/Lecture_sleep/.vscode/launch.json
+++ b/CodeForces/Lecture_sleep/.vscode/launch.json
@@ -3,12 +3,12 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [ 
         {
             "name": "clang++ - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/debugger",
+            "program": "${workspaceFolder}/solution",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
